--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,13 @@ deps =
     pre-commit
 skip_install = true
 
+[testenv:mypy]
+commands =
+    mypy --install-types --non-interactive {posargs}
+deps =
+    mypy==v1.10.0
+usedevelop = true
+
 [testenv:pylint]
 commands =
     pylint -j 0 {posargs}
