--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -74,6 +74,10 @@ tasks:
             version: "3.11"
             env:
               TOXENV: py311,lint
+          - name: tests python 3.12
+            version: "3.12"
+            env:
+              TOXENV: py312,lint
           - name: PyPI upload
             version: "3.8"
             env:
