[ci] Replace isort and pyupgrade with ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,6 @@ exclude_lines = [
     "pragma: no cover",
 ]
 
-[tool.isort]
-known_first_party = "grizzly"
-profile = "black"
-
 [tool.mypy]
 ignore_missing_imports = true
 strict = true
@@ -64,6 +60,10 @@ filterwarnings = [
 ]
 log_level = "DEBUG"
 
+[tool.ruff]
+fix = true
+target-version = "py38"
+
 [tool.ruff.lint]
 select = [
     # flake8-comprehensions
@@ -74,14 +74,18 @@ select = [
     "F",
     # Flynt
     "FLY",
+    # isort
+    "I",
     # Perflint
     "PERF",
+    # Ruff-specific rules
+    "RUF",
     # flake8-simplify
     "SIM",
     # flake8-type-checking
     "TCH",
-    # Ruff-specific rules
-    "RUF",
+    # pyupgrade
+    "UP",
     # pycodestyle
     "W",
 ]
