build: update build command

--- a/tox.ini
+++ b/tox.ini
@@ -53,11 +53,9 @@ usedevelop = true
 
 [testenv:pypi]
 commands =
-    python setup.py sdist bdist_wheel
+    python -m build
     twine upload --skip-existing dist/*
 deps =
-    setuptools>=43
-    setuptools_scm[toml]>=3.4
+    build
     twine
-    wheel
 skip_install = true
