feat: add entry-points for tools

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,15 @@ zip_safe = False
 
 [options.entry_points]
 console_scripts =
-    grizzly.status = grizzly.common.status_reporter:main
+    grizzly = grizzly:__main__
+    grizzly-reduce = grizzly.reduce:__main__
+    grizzly-reduce-bucket = grizzly.reduce.bucket:main
+    grizzly-reduce-crash = grizzly.reduce.crash:main
+    grizzly-replay = grizzly.replay:__main__
+    grizzly-replay-bucket = grizzly.replay.bucket:main
+    grizzly-replay-bugzilla = grizzly.replay.bugzilla:main
+    grizzly-replay-crash = grizzly.replay.crash:main
+    grizzly-status = grizzly.common.status_reporter:main
 grizzly_adapters =
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
