--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ disable = [
     "too-many-lines",
     "too-many-locals",
     "too-many-nested-blocks",
+    "too-many-positional-arguments",
     "too-many-statements",
     "unspecified-encoding",
 ]
