fix: replace interprocess_lock() with fasteners

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     bugsy
     cryptography
     cssbeautifier
+    fasteners
     ffpuppet >= 0.16.3
     FuzzManager
     jsbeautifier
