ci: fix actions workflow to match taskcluster

--- a/tox.ini
+++ b/tox.ini
@@ -24,12 +24,11 @@ usedevelop = true
 
 [testenv:codecov]
 commands =
-    codecov
+    codecov upload-process
 deps =
+    codecov-cli
     coverage[toml]
 skip_install = true
-allowlist_externals =
-    codecov
 
 [testenv:lint]
 commands =
