--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: Python CI
 
 on:
-  push:
-    branches: [master]
   pull_request:
     branches: [master]
+  push:
+    branches: [master]
+  release:
+    types: [released]
 
 jobs:
   test:
@@ -12,23 +14,30 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     strategy:
+      fail-fast: false
       matrix:
         include:
           - python-version: "3.9"
             platform: ubuntu-latest
+            toxenv: py39
           - python-version: "3.10"
             platform: ubuntu-latest
+            toxenv: py310
           - python-version: "3.11"
             platform: ubuntu-latest
+            toxenv: py311
           - python-version: "3.12"
             platform: ubuntu-latest
-            run-lint: true
+            toxenv: py312
           - python-version: "3.13"
             platform: ubuntu-latest
-          - python-version: "3.10"
+            toxenv: py313
+          - python-version: "3.12"
             platform: macos-latest
-          - python-version: "3.10"
+            toxenv: py312
+          - python-version: "3.12"
             platform: windows-latest
+            toxenv: py312
 
     steps:
       - uses: actions/checkout@v4
@@ -42,10 +51,9 @@ jobs:
         run: python -m pip install --upgrade tox
 
       - name: Run tests
-        run: tox -e py${{ matrix.python-version.replace('.', '') }}
+        run: tox -e ${{ matrix.toxenv }}
 
       - name: Run lint
-        if: matrix.run-lint == true
         run: tox -e lint
 
       - name: Run Codecov
@@ -55,7 +63,7 @@ jobs:
 
   publish:
     name: Build & Publish to PyPI
-    if: github.ref == 'refs/heads/master'
+    if: github.event_name == 'release'
     needs: test
     runs-on: ubuntu-latest
 
