--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,25 @@ jobs:
         include:
           - python-version: "3.9"
             platform: ubuntu-latest
+            toxenv: py39
           - python-version: "3.10"
             platform: ubuntu-latest
+            toxenv: py310
           - python-version: "3.11"
             platform: ubuntu-latest
+            toxenv: py311
           - python-version: "3.12"
             platform: ubuntu-latest
-            run-lint: true
+            toxenv: py312
           - python-version: "3.13"
             platform: ubuntu-latest
-          - python-version: "3.10"
+            toxenv: py313
+          - python-version: "3.12"
             platform: macos-latest
-          - python-version: "3.10"
+            toxenv: py312
+          - python-version: "3.12"
             platform: windows-latest
+            toxenv: py312
 
     steps:
       - uses: actions/checkout@v4
@@ -41,10 +47,7 @@ jobs:
         run: python -m pip install --upgrade tox
 
       - name: Run tests
-        run: |
-          TOXENV=${{ matrix.python-version }}
-          TOXENV=${TOXENV//.}
-          tox
+        run: tox -e ${{ matrix.toxenv }}
 
       - name: Run lint
         if: matrix.run-lint == true
