--- a/tox.ini
+++ b/tox.ini
@@ -26,10 +26,9 @@ usedevelop = true
 commands =
     codecov
 deps =
+    codecov-cli
     coverage[toml]
 skip_install = true
-allowlist_externals =
-    codecov
 
 [testenv:lint]
 commands =
