--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,8 @@ console_scripts =
 grizzly_adapters =
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
-    ffpuppet = grizzly.target.puppet_target:PuppetTarget
+    firefox-android = grizzly.target.adb_target:ADBTarget
+    firefox = grizzly.target.puppet_target:PuppetTarget
 grizzly_reduce_strategies =
     attrs = grizzly.reduce.strategies.lithium:MinimizeAttrs
     chars = grizzly.reduce.strategies.lithium:MinimizeChars
