--- a/setup.cfg
+++ b/setup.cfg
@@ -62,8 +62,8 @@ console_scripts =
 grizzly_adapters =
     no-op = grizzly.adapter.no_op_adapter:NoOpAdapter
 grizzly_targets =
-    firefox-android = grizzly.target.adb_target:ADBTarget
-    firefox = grizzly.target.puppet_target:PuppetTarget
+    firefox-android = grizzly.target.fenix_target:FenixTarget
+    firefox = grizzly.target.firefox_target:FirefoxTarget
 grizzly_reduce_strategies =
     attrs = grizzly.reduce.strategies.lithium:MinimizeAttrs
     chars = grizzly.reduce.strategies.lithium:MinimizeChars
