--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     cssbeautifier
     fasteners
     ffpuppet >= 0.17.0
-    fxpoppet >= 0.0.2
+    fxpoppet >= 0.1.0; sys_platform == "linux"
     FuzzManager
     jsbeautifier
     lithium-reducer >= 3.0.0
