--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     cssbeautifier
     fasteners
     ffpuppet >= 0.17.0
-    fxpoppet >= 0.2.1; sys_platform == "linux"
+    fxpoppet >= 0.2.2
     FuzzManager
     jsbeautifier
     lithium-reducer >= 3.0.0
