--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
     "pragma: no cover",
+    "raise NotImplementedError()",
 ]
 
 [tool.mypy]
