feat(reduce): add beautifulsoup prettify strategy
This strategy will be applied to html and svg files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ url = https://github.com/MozillaSecurity/grizzly
 include_package_data = True
 install_requires =
     aioquic==1.2.0
+    beautifulsoup4
     bugsy
     cryptography
     cssbeautifier
@@ -66,6 +67,7 @@ grizzly_targets =
     firefox = grizzly.target.firefox_target:FirefoxTarget
 grizzly_reduce_strategies =
     attrs = grizzly.reduce.strategies.lithium:MinimizeAttrs
+    beautifulsoup = grizzly.reduce.strategies.beautifulsoup:BeautifulSoupPrettify
     chars = grizzly.reduce.strategies.lithium:MinimizeChars
     check = grizzly.reduce.strategies.lithium:Check
     collapsebraces = grizzly.reduce.strategies.lithium:CollapseEmptyBraces
