feat(reduce): add css merge strategy

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,7 @@ grizzly_reduce_strategies =
     chars = grizzly.reduce.strategies.lithium:MinimizeChars
     check = grizzly.reduce.strategies.lithium:Check
     collapsebraces = grizzly.reduce.strategies.lithium:CollapseEmptyBraces
+    css-merge = grizzly.reduce.strategies.beautifulsoup:BeautifulSoupCSSMerge
     cssbeautify = grizzly.reduce.strategies.beautify:CSSBeautify
     jsbeautify = grizzly.reduce.strategies.beautify:JSBeautify
     jschars = grizzly.reduce.strategies.lithium:MinimizeJSChars
